--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ h4 {
     text-align: center;
 }
 
+button{
+    padding: 0%;
+}
+
 /*ANIMATIONS*/
 @keyframes slide-down {
     0% {
@@ -130,10 +134,10 @@ h4 {
     height: 70px;
     width: 100%;
     position: fixed;
+    box-shadow: 9px 5px 10px -5px #aaafb3;
 }
 
 .headerbtn {
-    padding-left: 0px 10px 0px 10px;
     width: 24%;
     height: 100%;
     background-color: #2496EF;
@@ -320,4 +324,12 @@ tr{
     height: 20px;
     padding: 1%;
     margin: 3%;
+}
+
+#projects img{
+    filter: brightness(40%);
+}
+
+#projects img:hover{
+    filter: brightness(100%);
 }
