--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,16 @@ button {
     text-align: left;
 }
 
+@media only screen and (min-width: 768px) {
+    .listing li {
+        float: left;
+    list-style-position: inside;
+    list-style-type: square;
+    margin-left: 5%;
+    }
+}
+
+
 .skills {
     color: rgb(0, 123, 160);
 }
@@ -238,6 +248,7 @@ button {
     display: inline-block;
     background-color: white;
     width: 95%;
+    z-index: 5;
     border-radius: 3px;
     box-shadow: 0px 10px 20px 0px rgba(0, 25, 50, 0.05);
     border: 1px solid #ecebeb;
@@ -245,13 +256,15 @@ button {
 
 #ark,
 #orion,
-#jbs {
+#jbs,
+#res {
     width: 90%;
     height: 90%;
 }
 
 #resume{
-    margin-bottom: 230px;
+    mmargin-bottom: 230px;
+    z-index: 10;
 }
 
 .project-desc {
@@ -296,18 +309,16 @@ button {
 }
 
 .footer {
-    visibility: hidden;
+    vvisibility: hidden;
     bottom: 0;
-    position: fixed;
-    z-index: -1;
+    pposition: fixed;
     mmargin: 5% 2% 0% 2%;
     color: black;
     display: inline-block;
     background-color: white;
     width: 100%;
     height: 200px;
-    text-align: center;
-    mmargin: 0%;
+    text-align: center;    
 }
 
 .show-footer{
