--- a/css/style.css
+++ b/css/style.css
@@ -156,16 +156,15 @@ button {
     color: white;
 }
 
-
-.logo-container,
 .placeholder-container {
     text-align: center;
 }
 
-.logo {
+
+.logo-inner {
     overflow: hidden;
-    padding: 2% 2% 2% 2%;
-    margin: 35px 2% 0% 2%;
+    padding: 5% 2% 0% 2%;
+    margin: 70px 2% 0% 2%;
     display: inline-block;
     text-align: center;
     background-color: white;
@@ -174,6 +173,7 @@ button {
     border-radius: 3px;
     border: 1px solid #ecebeb;
 }
+
 
 .stickynavbar {
     position: fixed;
@@ -226,9 +226,9 @@ button {
 @media only screen and (min-width: 768px) {
     .listing li {
         float: left;
-    list-style-position: inside;
-    list-style-type: square;
-    margin-left: 5%;
+        list-style-position: inside;
+        list-style-type: square;
+        margin-left: 5%;
     }
 }
 
@@ -262,7 +262,7 @@ button {
     height: 90%;
 }
 
-#resume{
+#resume {
     mmargin-bottom: 230px;
     z-index: 10;
 }
@@ -318,10 +318,10 @@ button {
     background-color: white;
     width: 100%;
     height: 200px;
-    text-align: center;    
+    text-align: center;
 }
 
-.show-footer{
+.show-footer {
     visibility: visible;
 }
 
@@ -360,4 +360,39 @@ tr {
 
 #projects img:hover {
     filter: brightness(100%);
+}
+
+
+@media only screen and (min-width: 768px) {
+    .logo-inner {
+        display: flex;
+        margin: 0% 2% 0% 2%;
+    }
+
+    .logo {
+        width: 60%;
+        height: 60%;
+        padding: 5% 0% 5% 0%;
+    }
+
+    .card {
+        margin: 1% 2% 2% 2%;
+        padding: 2% 0% 3% 0%;       
+    }
+
+    .inner-card{
+        width: 29%;
+        height: 90%;
+    }
+
+    .description {
+        width: 25%;
+        margin-top: 15%;
+    }
+
+    .projects{
+        display: flex;
+    }
+
+    
 }
