--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,17 @@ a {
     text-decoration: none;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3, 
+h4 {
     text-align: center;
-    margin: 0%;
+    margin: 2% 0% 3% 0%;
     z-index: 90;
-    font-family: 'Raleway', sans-serif;
-    padding-top: 3%;
+    font-family: 'Montserrat', sans-serif;
+    padding-top: 2%;
 }
+
 h4 {
     text-align: center;
 }
@@ -164,22 +168,26 @@ button {
     text-align: center;
 }
 
-.logo-container{
-    background-color: white;
+.logo-container {
+   
+        background:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../media/images/bground.jpg');
+        background-size: cover;
+    
     width: 100%;
 }
 
 .logo-inner {
-    overflow: hidden;    
+    overflow: hidden;
     margin-top: 70px;
     padding: 5% 1% 5% 1%;
     display: inline-block;
-    text-align: center;    
-    min-height: 180px;    
+    text-align: center;
+    min-height: 180px;
 }
 
-#about{
-    background-color: whitesmoke;
+#about {
+    background-color: white;
+    padding: 1% 0% 5% 0%;
 }
 
 .stickynavbar {
@@ -194,14 +202,14 @@ button {
     width: 55%;
     height: 50%;
     border: none;
-    border-radius: 100px;
+    border-radius: 100%;
 }
 
 #avatar {
     width: 55%;
     height: 50%;
     border: none;
-    border-radius: 100px
+    border-radius: 100%;
 }
 
 #ray {
@@ -213,18 +221,21 @@ button {
 }
 
 .intro {
-    color: #3f4142;
+   /* color: #3f4142;*/
+   color: white;
+   padding: 1%;
 }
 
 .placeholder {
     background-color: #e9f1f2;
     padding-top: 2%;
-    display: inline-block;    
-    width: 100%;    
+    display: inline-block;
+    width: 100%;
 }
 
 .listing {
     text-align: left;
+
 }
 
 @media only screen and (min-width: 768px) {
@@ -238,21 +249,28 @@ button {
 
 
 .skills {
-    color: rgb(0, 123, 160);
+    color: #009cb8;
 }
 
 .projects {
     color: #009cb8;
-    padding: 1% 0% 2% 0%;
+    padding: 0% 0% 2% 0%;
+    text-align: center;
 }
 
 .card {
-    margin: 5% 2% 5% 2%;
+    margin: 2% 2% 5% 2%;
     padding: 5% 0% 5% 0%;
-    display: inline-block;    
+    display: inline-block;
     width: 95%;
-    z-index: 5;
-}   
+}
+
+.inner-card {
+    margin: 5% 0% 2% 0%;
+    border: 1px solid #d3d6d8;
+    border-radius: 5px;
+    padding: 4% 0% 4% 0%;
+}
 
 #ark,
 #orion,
@@ -262,21 +280,21 @@ button {
     height: 90%;
 }
 
-#resume {   
-    padding: 1%;
+#resume {
+    padding: 4% 0% 4% 0%;
     z-index: 10;
     background-color: white;
 }
 
 .project-desc {
     color: #3f4142;
-    margin: 2%;
+    margin: 2% 2% 5% 2%;
 }
 
 .view {
     height: 35px;
-    width: 70px;
-    background-color: white;
+    width: 80px;
+    background-color: transparent;
     font-size: 16px;
     margin: 8px 0px 5px 0px;
     border-width: 1px;
@@ -297,7 +315,7 @@ button {
 
 .downloadbtn {
     height: 35px;
-    width: 90px;
+    width: 120px;
     color: #2496EF;
     border-color: #2496EF;
     background-color: white;
@@ -309,10 +327,10 @@ button {
     padding: 0;
 }
 
-.footer {    
+.footer {
     color: white;
     display: inline-block;
-    background-color: black;    
+    background-color: #323336;
     width: 100%;
     height: 200px;
     text-align: center;
@@ -324,7 +342,7 @@ button {
 
 .contact-details {
     width: 100%;
-    padding: 0%;   
+    padding: 0%;
 }
 
 table tr td a {
@@ -352,44 +370,64 @@ tr {
 }
 
 #projects img {
-    filter: brightness(40%);
+    filter: brightness(70%);
 }
 
 #projects img:hover {
     filter: brightness(100%);
+    animation-name: fade-in;
+    animation-duration: 500ms;
 }
 
 
 @media only screen and (min-width: 768px) {
+    .logo-container{
+        background:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../media/images/bground.jpg');
+        background-size: cover;
+    }
+
+    .description{
+        margin-top: 10%;
+    }
+    
     .logo-inner {
+        visibility: inherit;
         display: flex;
         margin: 0% 2% 0% 2%;
     }
 
-    .logo {
-        width: 60%;
-        height: 60%;
+    .logo {        
+        width: 35%;
+        height: 35%;
         padding: 5% 0% 5% 0%;
     }
 
+    .intro {
+        color: white;
+    }
+         
     .card {
         margin: 1% 2% 2% 2%;
-        padding: 2% 0% 3% 0%;       
+        padding: 2% 0% 3% 0%;
     }
 
-    .inner-card{
-        width: 29%;
+    .inner-card {
+        padding: 1%;
+        margin: 1%;
+        width: 32%;
         height: 90%;
+        border: 1px solid #d3d6d8;
+        border-radius: 5px;
     }
 
     .description {
         width: 25%;
-        margin-top: 15%;
+        margin-top: 10%;
     }
 
-    .projects{
+    .projects {
         display: flex;
     }
 
-    
+
 }
