--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ button {
 
 .logo-container {
 
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../media/images/bground.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../media/images/bgroundx.jpg');
     background-size: cover;
 
     width: 100%;
@@ -323,6 +323,11 @@ button {
 .orion {
     color: #009cb8;
     border-color: #009cb8;
+}
+
+.jbs{
+    color: lightseagreen;
+    border-color: lightseagreen;
 }
 
 .downloadbtn {
