--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap'); */
-
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap'); */
-
-/* @import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300&display=swap'); */
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-
 * {
   box-sizing: border-box;
 }
@@ -29,7 +21,7 @@ html {
   /* font-family: 'Roboto', sans-serif; */
   /* font-family: 'Open Sans', sans-serif; */
   /* font-family: 'Sansita Swashed', cursive; */
-  font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
 }
 
 header {
@@ -61,6 +53,7 @@ nav {
   left: 0;
   right: 0;
   top: -35px;
+  font-family: 'Montserrat', sans-serif;
   margin-left: auto;
   margin-right: auto;
   margin-top: 250px;
