--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ header {
   -webkit-transform: translate3d(0, 0, 0);
   -webkit-transform: translateZ(0);
   backface-visibility: hidden;
-  perspective: 1000;
+  perspective: 1000px;
   transform: translate3d(0, 0, 0);
   transform: translateZ(0);
   will-change: transform;
