navigation links now highlighted on scroll (pt 1)

--- a/css/style.css
+++ b/css/style.css
@@ -166,3 +166,12 @@ main {
   position: relative;
   top: -70px;
 }
+
+.active {
+  color: red;
+}
+
+/* .card:first-child,
+.nav-link:first-child {
+  display: none;
+} */
